--- a/src/main/resources/templates/pet/editForm.html
+++ b/src/main/resources/templates/pet/editForm.html
@@ -1,53 +1,82 @@
 <!DOCTYPE HTML>
-<html xmlns:th="https://www.thymeleaf.org">
+<html xmlns:th="https://www.thymeleaf.org" lang="tr">
 <head>
     <title>Vet App</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 <body>
 
-<p><a th:href="@{/pets}">Pet Listesine dön</a></p>
-<div th:if="${pet.owner}">
-    <p><a th:href="@{/owners/{id}(id=${pet.owner.id})}">Owner sayfasına dön</a></p>
-</div>
-<hr>
-<div th:if="${message}">
-    <p>[[${message}]]</p>
-</div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" th:href="@{/}">VetApp</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
+                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
+                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
+            </div>
+        </div>
+    </div>
+</nav>
 
-<form th:action="@{/pets/edit/{id}(id=${pet.id})}" th:object="${pet}" method="post">
+<div class="container mt-5 col-md-4">
+    <h1>Bilgileri Düzenle</h1>
+    <hr>
 
-    <div th:if="${#fields.hasAnyErrors()}">
-        <ul>
-            <li th:each="err : ${#fields.errors('pet.*')}" th:text="${err}"/>
-        </ul>
+    <div class="d-flex justify-content-start mb-5">
+        <div>
+            <a class="btn btn-primary" th:href="@{/owners/{id}(id=${pet.owner.id})}">Hayvan Sahibi Sayfasına Dön</a>
+        </div>
     </div>
 
-    <p>Name: <input type="text" th:field="*{name}"/></p>
-    <p>Age: <input type="number" th:field="*{age}"/></p>
+    <div th:if="${message}" class="alert alert-success" role="alert">
+        [[${message}]]
+    </div>
 
-    <label for="genus">Genus</label>
-    <select th:field="*{genus}" id="genus">
-        <option th:each="g : ${genus}" th:value="${g.key}" th:text="${g.value}"
-                th:selected="${g.key==pet.genus}">
-        </option>
-    </select>
-    <br><br>
+    <form th:action="@{/pets/edit/{id}(id=${pet.id})}" th:object="${pet}" method="post">
+        <div th:if="${#fields.hasAnyErrors()}" class="alert alert-danger" role="alert">
+            <p th:each="err : ${#fields.errors('pet.*')}" th:text="${err}"></p>
+        </div>
+        <div class="mb-3">
+            <label for="name" class="form-label">İsim</label>
+            <input type="text" class="form-control" th:field="*{name}" id="name">
+        </div>
+        <div class="mb-3">
+            <label for="age" class="form-label">Yaş</label>
+            <input type="number" class="form-control" th:field="*{age}" id="age">
+        </div>
 
-    <label for="owner">Owner</label>
-    <select th:field="*{owner}" id="owner">
-        <option th:selected="${pet.owner==null}" value="">Lütfen seçim yapınız.</option>
-        <th:block th:each="owner : ${owners}">
-            <option th:value="${owner.id}" th:text="${owner.fullName}"></option>
-        </th:block>
-    </select>
-
-    <br>
-    <br>
-    <textarea rows="20" cols="80" th:field="*{description}">...</textarea>
-    <input type="reset" value="Formu Temizle"/>
-    <p><input type="submit" value="Kaydet"/></p>
-</form>
+        <div class="mb-3">
+            <label for="genus" class="form-label">Cinsi</label>
+            <select class="form-select" th:field="*{genus}" id="genus">
+                <option value="">Lütfen seçim yapın...</option>
+                <option th:each="g : ${genus}" th:value="${g.key}" th:text="${g.value}"
+                        th:selected="${g.key==pet.genus}"
+                ></option>
+            </select>
+        </div>
+        <div class="mb-3">
+            <label for="owner" class="form-label">Hayvan Sahibi</label>
+            <select class="form-select" th:field="*{owner}" id="owner">
+                <option th:selected="${pet.owner==null}" value="">Lütfen seçim yapınız.</option>
+                <th:block th:each="owner : ${owners}">
+                    <option th:value="${owner.id}" th:text="${owner.fullName}"></option>
+                </th:block>
+            </select>
+        </div>
+        <div class="mb-3">
+            <label for="description" class="form-label">Açıklama</label>
+            <textarea class="form-control" th:field="*{description}" id="description" rows="3"></textarea>
+        </div>
+        <button type="submit" class="btn btn-success">Kaydet</button>
+    </form>
+</div>
 
 </body>
 </html>
