--- a/src/main/resources/templates/pet/index.html
+++ b/src/main/resources/templates/pet/index.html
@@ -1,76 +1,106 @@
 <!DOCTYPE HTML>
-<html xmlns:th="https://www.thymeleaf.org">
+<html xmlns:th="https://www.thymeleaf.org" lang="tr">
 <head>
     <title>Vet App</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-
-    <style>
-        table, th, td {
-            border: 1px solid black;
-        }
-    </style>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" th:href="@{/}">VetApp</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
+                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
+                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
+            </div>
+        </div>
+    </div>
+</nav>
+<div class="container mt-5">
 
-<p><a th:href="@{/}">Ana Sayfa</a></p>
-<p><a th:href="@{/pets/add}">Pet Ekle</a></p>
+    <h2>Hayvanlar</h2>
+    <hr>
+    <div class="d-flex justify-content-between">
+        <div>
+            <form th:action="@{/pets/search}" method="get" class="row g-3">
+                <div class="col-auto">
+                    <label for="name" class="visually-hidden">İsim: </label>
+                    <input type="text" class="form-control" name="name" id="name"
+                           placeholder="aranacak isim...">
+                </div>
+                <div class="col-auto">
+                    <button type="submit" class="btn btn-primary mb-3">Ara</button>
+                </div>
+            </form>
+        </div>
+        <div>
+            <a class="btn btn-primary" th:href="@{/pets/add/}"><i class="bi bi-plus-lg"></i> Yeni Kayıt</a>
+        </div>
+    </div>
 
-<form th:action="@{/pets/search}" method="get">
-    <label for="name">Search: </label>
-    <input type="text" name="name" id="name" th:value="${name}">
-    <button type="submit">Search</button>
-</form>
-<br>
-<div th:if="${message}">
-    <p>[[${message}]]</p>
+    <div class="justify-content-start">
+        <span class="badge bg-secondary">Toplam Kayıt: [[${totalItems}]]</span>
+    </div>
+
+    <div th:if="${message}" class="alert alert-success" role="alert">
+        [[${message}]]
+    </div>
+
+    <table class="table table-light table-bordered table-hover mt-3">
+        <thead>
+        <tr>
+            <th scope="col">İsim</th>
+            <th scope="col">Yaş</th>
+            <th scope="col">Tür</th>
+            <th scope="col">Sahibi</th>
+            <th scope="col">Kayıt Tarihi</th>
+            <th scope="col">Güncellenme Tarihi</th>
+            <th scope="col">İşlem</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="pet : ${pets}">
+            <td class="text-capitalize">[[${pet.name}]]</span></td>
+            <td>[[${pet.age}]]</td>
+            <td>[[${pet.genus.value}]]</td>
+            <td th:if="${pet.owner != null}">[[${pet.owner.fullName}]]</td>
+            <td th:unless="${pet.owner != null}"></td>
+            <td>[[${#dates.format(pet.createdAt, 'dd/MMM/yyyy HH:mm')}]]</td>
+            <td>[[${#dates.format(pet.updatedAt, 'dd/MMM/yyyy HH:mm')}]]</td>
+            <td><a class="btn btn-outline-success" th:href="@{/pets/{id}(id=${pet.id})}">Göster</a>
+                <a class="btn btn-outline-warning" th:href="@{/pets/edit/{id}(id=${pet.id})}">Düzenle</a>
+                <a class="btn btn-outline-danger" th:href="@{/pets/delete/{id}(id=${pet.id})}">Sil</a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-end">
+            <li class="page-item" th:classappend="${currentPage == 1 } ? 'disabled' : ''">
+                <a class="page-link" th:href="@{/pets(page=${currentPage - 1})}">Önceki Sayfa</a>
+            </li>
+            <li class="page-item" th:each="i: ${#numbers.sequence(1, totalPages)}"
+                th:classappend="${currentPage == i} ? 'active' : ''" aria-current="page">
+                <span th:if="${currentPage == i}">
+                    <span class="page-link">[[${i}]]</span>
+                </span>
+                <span th:unless="${currentPage == i}">
+                    <a class="page-link" th:href="@{/pets(page=${i})}">[[${i}]]</a>
+                </span>
+            </li>
+            <li class="page-item" th:classappend="(${totalPages == 1 || totalPages == currentPage }) ? 'disabled' : ''">
+                <a class="page-link" th:href="@{/pets(page=${currentPage + 1})}">Sonraki Sayfa</a>
+            </li>
+        </ul>
+    </nav>
 </div>
-
-<table>
-    <thead>
-    <tr>
-        <th>İsim</th>
-        <th>Yaş</th>
-        <th>Tür</th>
-        <th>Sahibi</th>
-        <th>Oluşturulma Tarihi</th>
-        <th>Güncellenme Tarihi</th>
-        <th>İşlem</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="pet : ${pets}">
-        <td>[[${pet.name}]]</span></td>
-        <td>[[${pet.age}]]</td>
-        <td>[[${pet.genus.value}]]</td>
-        <td th:if="${pet.owner != null}">[[${pet.owner.fullName}]]</td>
-        <td th:unless="${pet.owner != null}"></td>
-        <td th:text="${#dates.format(pet.createdAt, 'dd/MMM/yyyy HH:mm')}"></td>
-        <td th:text="${#dates.format(pet.updatedAt, 'dd/MMM/yyyy HH:mm')}"></td>
-        <td>
-            <a th:href="@{/pets/{id}(id=${pet.id})}">Göster</a>
-            <a th:href="@{/pets/edit/{id}(id=${pet.id})}">Düzenle</a>
-            <a th:href="@{/pets/delete/{id}(id=${pet.id})}">Sil</a>
-        </td>
-    </tr>
-    </tbody>
-</table>
-
-
-<footer>
-    Total Items [[${totalItems}]] : Page [[${currentPage}]] of [[${totalPages}]]
-    &nbsp; &nbsp; - &nbsp;
-    <span th:each="i: ${#numbers.sequence(1, totalPages)}">
-        <span th:if="${currentPage == i}">
-            <span>[[${i}]]</span>
-        </span>
-        <span th:unless="${currentPage == i}">
-            <a th:href="@{/pets(page=${i})}">[[${i}]]</a>
-        </span>
-        &nbsp; &nbsp;
-    </span>
-</footer>
-
-
 </body>
 </html>
