--- a/src/main/resources/templates/pet/search.html
+++ b/src/main/resources/templates/pet/search.html
@@ -1,58 +1,85 @@
 <!DOCTYPE HTML>
-<html xmlns:th="https://www.thymeleaf.org">
+<html xmlns:th="https://www.thymeleaf.org" lang="tr">
 <head>
     <title>Vet App</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-
-    <style>
-        table, th, td {
-            border: 1px solid black;
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" th:href="@{/}">VetApp</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
+                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
+                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
+            </div>
+        </div>
+    </div>
+</nav>
+<div class="container mt-5">
 
-<p><a th:href="@{/}">Ana Sayfa</a></p>
-<p><a th:href="@{/pets/add}">Pet Ekle</a></p>
-<p><a th:href="@{/pets}">Geri Dön</a></p>
+    <div class="d-flex justify-content-between">
+        <div>
+            <form th:action="@{/pets/search}" method="get" class="row g-3">
+                <div class="col-auto">
+                    <label for="name" class="visually-hidden">İsim </label>
+                    <input type="text" class="form-control" name="name" id="name"
+                           th:value="${param.name}">
+                </div>
+                <div class="col-auto">
+                    <button type="submit" class="btn btn-primary mb-3">Ara</button>
+                </div>
+            </form>
+        </div>
+        <div>
+            <a class="btn btn-primary" th:href="@{/pets/add/}"><i class="bi bi-plus-lg"></i> Yeni Kayıt</a>
+        </div>
+    </div>
 
-<div th:if="${message}">
-    <p>[[${message}]]</p>
-</div>
+    <div class="justify-content-start">
+        <span class="badge bg-secondary">Toplam Kayıt: [[${petListSize}]]</span>
+    </div>
 
-<hr>
-
-
-<div th:if="${pets}">
-    <table>
-        <thead>
-        <tr>
-            <th>İsim</th>
-            <th>Yaş</th>
-            <th>Tür</th>
-            <th>Sahibi</th>
-            <th>Oluşturulma Tarihi</th>
-            <th>Güncellenme Tarihi</th>
-            <th>İşlem</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="pet : ${pets}">
-            <td>[[${pet.name}]]</span></td>
-            <td>[[${pet.age}]]</td>
-            <td>[[${pet.genus.value}]]</td>
-            <td th:if="${pet.owner != null}">[[${pet.owner.fullName}]]</td>
-            <td th:unless="${pet.owner != null}"></td>
-            <td th:text="${#dates.format(pet.createdAt, 'dd/MMM/yyyy HH:mm')}"></td>
-            <td th:text="${#dates.format(pet.updatedAt, 'dd/MMM/yyyy HH:mm')}"></td>
-            <td>
-                <a th:href="@{/pets/{id}(id=${pet.id})}">Göster</a>
-                <a th:href="@{/pets/edit/{id}(id=${pet.id})}">Düzenle</a>
-                <a th:href="@{/pets/delete/{id}(id=${pet.id})}">Sil</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+    <div th:if="${petListSize == 0}">
+        <h4>Arama sonucunda kayıt bulunamadı.</h4>
+    </div>
+    <div th:unless="${petListSize == 0}">
+        <table class="table table-light table-bordered table-hover mt-3">
+            <thead>
+            <tr>
+                <th scope="col">İsim</th>
+                <th scope="col">Yaş</th>
+                <th scope="col">Tür</th>
+                <th scope="col">Sahibi</th>
+                <th scope="col">Kayıt Tarihi</th>
+                <th scope="col">Güncellenme Tarihi</th>
+                <th scope="col">İşlem</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="pet : ${pets}">
+                <td class="text-capitalize">[[${pet.name}]]</span></td>
+                <td>[[${pet.age}]]</td>
+                <td>[[${pet.genus.value}]]</td>
+                <td th:if="${pet.owner != null}">[[${pet.owner.fullName}]]</td>
+                <td th:unless="${pet.owner != null}"></td>
+                <td>[[${#dates.format(pet.createdAt, 'dd/MMM/yyyy HH:mm')}]]</td>
+                <td>[[${#dates.format(pet.updatedAt, 'dd/MMM/yyyy HH:mm')}]]</td>
+                <td><a class="btn btn-outline-success" th:href="@{/pets/{id}(id=${pet.id})}">Göster</a>
+                    <a class="btn btn-outline-warning" th:href="@{/pets/edit/{id}(id=${pet.id})}">Düzenle</a>
+                    <a class="btn btn-outline-danger" th:href="@{/pets/delete/{id}(id=${pet.id})}">Sil</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 </body>
 </html>
