--- a/src/main/resources/templates/pet/show.html
+++ b/src/main/resources/templates/pet/show.html
@@ -1,38 +1,97 @@
 <!DOCTYPE HTML>
-<html xmlns:th="https://www.thymeleaf.org">
+<html xmlns:th="https://www.thymeleaf.org" lang="tr">
 <head>
     <title>Vet App</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
 </head>
 <body>
 
-<p><a th:href="@{/}">Ana sayfaya dön</a></p>
-<p><a th:href="@{/pets}">Pet Listesine dön</a></p>
-<div th:if="${pet.owner}">
-    <p><a th:href="@{/owners/{id}(id=${pet.owner.id})}">Owner sayfasına dön</a></p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" th:href="@{/}">VetApp</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
+                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
+                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<div class="container mt-5">
+
+
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="card text-dark bg-light" style="min-height: 400px;">
+                <div class="card-body">
+                    <h5 class="card-title">[[${pet.name}]]</h5>
+                    <hr>
+                    <p class="card-text"><b>Yaş:</b> [[${pet.age}]]</p>
+                    <p class="card-text"><b>Cins:</b> [[${pet.genus.value}]]</p>
+                    <p class="card-text"><b>Kayıt Tarihi:</b> [[${#dates.format(pet.createdAt, 'dd/MMM/yyyy HH:mm')}]]
+                    </p>
+                    <p class="card-text"><b>Güncellenme Tarihi:</b> [[${#dates.format(pet.updatedAt, 'dd/MMM/yyyy
+                        HH:mm')}]]</p>
+                    <p class="card-text"><b>Güncellenme Tarihi:</b> [[${#dates.format(pet.updatedAt, 'dd/MMM/yyyy
+                        HH:mm')}]]</p>
+                    <p class="card-text"><b>Açıklama:</b> [[${pet.description}]]</p>
+
+                </div>
+                <div class="card-footer text-muted">
+                    <div class="row">
+                        <div class="col-md-6 d-grid">
+                            <a class="btn  btn-danger" th:href="@{/pets/delete/{id}(id=${pet.id})}">
+                                <i class="bi bi-trash3"></i> Sil</a>
+                        </div>
+                        <div class="col-md-6 d-grid">
+                            <a class="btn btn-primary" th:href="@{/pets/edit/{id}(id=${pet.id})}">
+                                <i class="bi bi-pencil"></i> Düzenle</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="card text-dark bg-light" style="min-height: 400px;">
+                <div class="card-body">
+                    <h5 class="card-title">[[${pet.owner.fullName}]]</h5>
+                    <hr>
+                    <p class="card-text"><b>Telefon:</b> [[${pet.owner.telephoneNumber}]]</p>
+                    <p class="card-text"><b>Email:</b> [[${pet.owner.email}]]</p>
+                    <p class="card-text"><b>Adres:</b> [[${pet.owner.address}]]</p>
+                    <p class="card-text"><b>Kayıt Tarihi:</b> [[${#dates.format(pet.owner.createdAt, 'dd/MMM/yyyy
+                        HH:mm')}]]</p>
+                    <p class="card-text"><b>Güncellenme Tarihi:</b> [[${#dates.format(pet.owner.updatedAt, 'dd/MMM/yyyy
+                        HH:mm')}]]</p>
+                </div>
+                <div class="card-footer text-muted">
+                    <div class="row">
+                        <div class="col-md-6 d-grid">
+                            <a class="btn  btn-danger" th:href="@{/owners/delete/{id}(id=${pet.owner.id})}">
+                                <i class="bi bi-trash3"></i> Sil</a>
+                        </div>
+                        <div class="col-md-6 d-grid">
+                            <a class="btn btn-primary" th:href="@{/owners/edit/{id}(id=${pet.owner.id})}">
+                                <i class="bi bi-pencil"></i> Düzenle</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
 </div>
-<hr>
-<h1>Pet</h1>
-<hr>
-<p><b>Name:</b> [[${pet.name}]]</p>
-<p><b>Age:</b> [[${pet.age}]]</p>
-<p><b>Genus:</b> [[${pet.genus.value}]]</p>
-<p><b>Description:</b> [[${pet.description}]]</p>
-<p><b>Created At:</b> [[${#dates.format(pet.createdAt, 'dd/MMM/yyyy HH:mm')}]]</p>
-<p><b>Updated At:</b> [[${#dates.format(pet.updatedAt, 'dd/MMM/yyyy HH:mm')}]]</p>
-<a th:href="@{/pets/edit/{id}(id=${pet.id})}">Düzenle</a>
-<a th:href="@{/pets/delete/{id}(id=${pet.id})}">Sil</a>
-<hr>
-<div th:if="${pet.owner}">
-    <h3>Owner</h3>
-    <hr>
-    <p><b>Ad Soyad:</b> [[${pet.owner.fullName}]]</span></p>
-    <p><b>Telefon:</b> [[${pet.owner.telephoneNumber}]]</p>
-    <p><b>Email:</b> [[${pet.owner.email}]]</p>
-    <p><b>Adres:</b> [[${pet.owner.address}]]</p>
-    <a th:href="@{/owners/edit/{id}(id=${pet.owner.id})}">Düzenle</a>
-    <a th:href="@{/owners/delete/{id}(id=${pet.owner.id})}">Sil</a>
-</div>
+
 
 </body>
 </html>
