--- a/src/main/resources/templates/pet/show.html
+++ b/src/main/resources/templates/pet/show.html
@@ -26,11 +26,11 @@
                 <div class="card-footer text-muted">
                     <div class="row g-2">
                         <div class="col-md-6 d-grid">
-                            <a class="btn  btn-danger" th:href="@{/pets/delete/{id}(id=${pet.id})}">
+                            <a class="btn btn-danger" th:href="@{/pets/delete/{id}(id=${pet.id})}">
                                 <i class="bi bi-trash3"></i>&nbsp;&nbsp;Sil</a>
                         </div>
                         <div class="col-md-6 d-grid">
-                            <a class="btn btn-primary" th:href="@{/pets/edit/{id}(id=${pet.id})}">
+                            <a class="btn btn-warning" th:href="@{/pets/edit/{id}(id=${pet.id})}">
                                 <i class="bi bi-pencil"></i>&nbsp;&nbsp;Düzenle</a>
                         </div>
                     </div>
